0030748: Visualization - Marker displayed in immediate layer ruins QT Quick view controls

OpenGl_Workspace::ResetAppliedAspect() now resets active texture unit to GL_TEXTURE0.